--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prebuild": "rm -rf ./target",
     "build": "mvn package",
-    "deploy": "sls deploy --config=serverless.beta.yml",
-    "create-domain:beta": "sls create_domain --config=serverless.beta.yml",
+    "deploy:beta": "sls deploy --config=serverless.beta.yml",
+    "domain:beta": "sls create_domain --config=serverless.beta.yml",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aaron Sisler",
